--- a/academic/icfp2010/supero.tex
+++ b/academic/icfp2010/supero.tex
@@ -881,71 +881,48 @@ Common Subexpression Elimination (CSE) involves spotting where a program would o
 
 The GHC compiler inlines many non-recursive functions during the simplification phase \cite{spj:inlining}. It is certainly possible that our simplification rules could be extended to inline some functions, such as |id|, provided no new names were introduced (and thus termination was unaffected). Another alternative would be to inline simple functions in the source program (such as |otherwise| and |(.)|), before supercompilation started. The primary motivation for inlining simple functions would be to reduce the complexity of the main supercompilation phase, and avoid inopportune termination splits. We have deliberately \textit{not} inlined any functions outside the |step| function, as there is a risk that doing so would hide weaknesses in the supercompiler. However, we think it would be worthwhile to pursue.
 
-\section{Example}
+\todo{give sensible section name}
+\section{Running a Supercompiler}
 \label{sec:examples}
 
-Supercompilation natrually 
+Supercompilation naturally subsumes many other program transformations, including constructor specialisation \cite{spj:specconstr} and deforestation \cite{gill:shortcut_deforestation,wadler:deforestation}. Supercompilation (in the form presented here) does not remove the need for strictness analysis or say how to compile to native code. In order generate executable programs from a supercompiled program, we compile the resulting Core using GHC \cite{ghc6_12}.
+
+We now give an example where our supercompiler massively outperforms GHC, and discuss what optimisations are being done. Our example is:
 
 \begin{code}
-root i = map square (iterate (+1) 1) !! i
+root n = map square (iterate (+1) 1) !! n
     where square x = x * x
 \end{code}
 
-Let's consider this program. If we compile and run for n = 400000 we get GHC taking 0.149 seconds, and Supero taking 0.011 seconds. With stream fusion it gets reduced to 1.25. Unfortunately GHC stack overflows if it goes higher.
-
-A few things to note:
-
-Supercompilation has eliminated all the lists from this program, and yet has no knowledge of lists.
-
-While stream fusion is powerful, it isn't a panacea.
-
-The strictness analysis works much better with the lists gone - GHC is remarkably efficient at creating lists.
-
-There is no rule map f x !! i ==> f (x !! i), but there probably should be. However, all these rely on people using specific functions, and people predicting patterns. In this case I don't think it matter as both GHC and Stream fusion manage to fuse the map/iterate, but in general it would help.
-
-GHC reduces it all to:
+Running this program with |n = 400000|, GHC takes 0.149 seconds, while our supercompiler combined with GHC takes 0.011 seconds. Running for larger values of |n| is not feasible as the GHC only variant overflows the stack. After optimising using our supercompiler, then using strictness analysis and unboxing from GHC \cite{spj:unboxing}, our resulting program is:
 
 \begin{code}
 go :: Int# -> Int# -> Int#
-go x y =
-    let y_2 = y -# 1
-    in case y_2 of
-        0 -> let z = x +# 1 in z *# z
-        _ -> go (x +# 1) y_2
+go x y = case x of
+    0 -> y * y
+    _ -> go (x - 1) (y + 1)
 \end{code}
 
-To get this result supero had to do specialisation of the iterate function and the map function. GHC can do this by relying on some form of pushing things down and making them non-recursive, but it sucks.
+All the intermediate lists have been removed and all the numbers have been unboxed (GHC uses |Int#| for unboxed integers, and all the arithmetic is performed on unboxed integers). This main loop runs without performing any memory allocation. The program compiled with GHC alone is much less efficient. GHC fuses the |map|/|iterate| function, and specialises the resulting combination on the |square| function, but not the increment -- |(+1)| is passed as a higher order function. Because lists and higher-order functions remain, GHC is not able determine strictness information or apply unboxing.
 
-Note that it doesn't square each element, it has in effect inverted the flow so that only the final element is squared.
-
-Here are some examples of supercompiled functions, with a little bit of commentary.
-
-
-While the example is fake, the results are real. We go 21 times faster than GHC.
-
-We also compared to stream fusion, which resulted in an improvement of n. We deliberately choose to
-
-
-\subsection{Specialisation}
-
-Give map head as an example.
-
-\subsection{Fusion}
-
-You've already seen map/map, but it's important to remember that with our supercompiler lists are not special in any way. For example, if we wrote the identical program on the data type |data MyList alpha = MyNil || MyCons alpha (MyList alpha)| we'd get exactly the same fusion. To give an example:
+GHC can specialise functions on data values using constructor specialisation, but cannot specialise on functions. To allow specialisation some functions are written in a particular style:
 
 \begin{code}
-data Tree alpha = Leaf alpha | Branch (Tree alpha) (Tree alpha)
-
-root x = flatten (mapTree (+1) x)
-flatten -- with continuations
-mapTree -- standard fmap on Tree
+foldr f z xs = go xs
+    where  go []      = z
+           go (y:ys)  = f y (go ys)
 \end{code}
 
-And we get the right result out.
+Here, provided lambda-lifting has not been performed, the function |foldr| appears to be non-recursive. GHC can inline non-recursive functions, allowing the function |f| to be known. In contrast, our supercompiler has specialised all the functions to their higher-order parameters.
+
+GHC uses rewrite rules to perform eliminate unnecessary lists \cite{spj:rules}. A rewrite rule specifies a pattern to replace with another pattern at compile time. GHC contains a set of rules that replace |map| and |iterate| with alternative versions, and then further rules to fuse them together. GHC does not contain a rule that successfully merges the |(!!)| operator with the rest of the program. Our supercompiler does not rely on rules, which means that changing the data type or redefining |map| locally would have no effect, while in either case GHC would not be able to fuse the lists. Supercompilation can also apply the same techniques to fuse intermediate trees, tuples and any other form of data.
+
+Some of GHC's optimisations, specifically strictness analysis and unboxing, work much better in the absence of lists and higher-order functions. The transformations performed by our supercompiler have allowed these phases to achieve their full potential.
 
 \section{Benchmarks}
 \label{sec:benchmarks}
+
+\todo{This section is not finished}
 
 The standard nofib ones, eek!
 
@@ -963,6 +940,8 @@ Our compiler is whole program, although we could split it up by defining interfa
 
 \section{HTML Parsing}
 \label{sec:tagsoup}
+
+\todo{This section is not finished}
 
 The TagSoup library \cite{tagsoup} is a simple parser for XML/HTML, based on the HTML 5 specification. Given a String, TagSoup produces a list of tokens (such as tag open, tag close, attribute). The parser was deliberately written in a way that mirrors the HTML 5 specification, which is based around a state passing approach. Each rule has been modelled in the most direct way, and then a supporting library simplifies it. For example, section 9.2.4.10 of the HTML 5 specification states:
 
@@ -1074,76 +1053,52 @@ This rule is not true, and our supercompiler spotted it. \footnote{Note that in 
 
 We first describe the related work in the area of supercompilation, particularly what makes our supercompiler unique. We then describe some work in related areas, particularly those from which we have used ideas.
 
-\subsection{Comparison to Other Supercompilers}
+\subsection{Supercompilation}
 \label{sec:comparison}
 
-Supercompilation \cite{supercompilation,turchin:experiments} was introduced by Turchin for the Refal language \cite{refal}. Since this original work, there have been various suggestions of both termination strategies and generalisation/splitting strategies \cite{turchin:generalisation,sorensen:supercompilation,leuschel:homeomorphic}. The original supercompiler maintained both positive and negative knowledge \cite{secher:perfect_supercompilation}, however our implementation uses only positive knowledge. More recently supercompilation has started to converge towards a common design, described in detail by \citet{klyuchnikov:hosc}, but covering much of the underlying design present in other papers \cite{mitchell:ifl2007post,jonsson:supercompilationpopl,more?}. Compared to this increasingly common foundation our supercompiler makes a number of radical decisions -- our treatment of let is very different, and the termination criteria is completely new. Overall these decisions lead to a very different supercompiler, but very clearly following the same underlying goal of evaluating open expressions.
+Supercompilation was introduced by \citet{supercompilation} for the Refal programming language \cite{refal}. Since this original work, there have been various suggestions of both termination strategies and generalisation/splitting strategies \cite{turchin:generalisation,sorensen:supercompilation,leuschel:homeomorphic}. The original supercompiler maintained both positive and negative knowledge \cite{secher:perfect_supercompilation}, however our implementation uses only positive knowledge (what a variable is, rather than what it cannot be). More recently supercompilation has started to converge towards a common design, described in detail by \citet{klyuchnikov:hosc}, which has much in common with the underlying design present in other papers \cite{me:supero,jonsson:supercompilation}.
+
+Compared to an increasingly common foundation, our supercompiler is radically different. We have changed many of the ingredients of supercompilation (the treatment of let, termination criteria, how the termination histories are used), but have also changed the way these ingredients are combined (the manager). In particular, many of our choices would not work if applied in isolation to another supercompiler -- for example the termination criteria relies on the treatment of let.
 
 \subsubsection{Let Expressions}
 
-The biggest different from other Core languages is that we require let expressions, and use them extensively (some might say exclusively!). The issue of let expressions in supercompilation has not previously been a primary focus. If lets are mentioned, the usual strategy is to substitute all linear lets and residuate all others. Lets have been considered in a strict setting \cite{jonsson:supercompilationpopl}, where they are used to preserve termination semantics, but in this work all strict lets are inlined without regard to loss of sharing (\todo{check that statement}). Movement of lets can have a dramatic impact on performance: carefully designed let-shifting transformations give an average speedup of 15\% in GHC \cite{spj:letfloating}, suggesting let expressions are critical to the performance of real programs.
+The biggest difference from other Core languages is that we require let expressions, and use them extensively (some might say exclusively!). The issue of let expressions in supercompilation has not previously been a primary focus. If lets are included in the Core language, the usual strategy is to substitute all linear lets and residuate all others. Movement of lets can have a dramatic impact on performance: carefully designed let-shifting transformations give an average speedup of 15\% in GHC \cite{spj:letfloating}, suggesting let expressions are critical to the performance of real programs.
 
-In past systems (notably \cite{me:ifl2007post}) there was a tension between having expressions bound at let bindings and not. It became critical to inline let's if at all possible, and where this could not be done performance was lost. Going to the opposite extreme it seems that if let's are expected, and dealt with properly, it in fact makes things simpler and more robust.
+Our previous work inlined all let bindings that it could show did not lead to a loss of sharing \cite{me:supero}. Unfortunately, where a let could not be removed, there was a substantial performance penalty. By going to the opposite extreme we are forced to deal with let bindings properly, which makes our new supercompiler both simpler and more robust.
 
 \subsubsection{Termination Criteria}
 
-The standard termination criteria used by supercompilers is the homeomorphic embedding \cite{leuschel:hoemomorphic}. The homeomorphic embedding is a well-quasi ordering, from Kruskal's Tree Theorem \cite{kruskal:tree}. The idea is based on for every infinite sequence $e_1,e_2 \ldots$ there exist indicies $i < j$ such that $e_i \ntriangleleft e_j$. Our termination ordering uses a similar idea of a well-quasi ordering, but in a very different setting.
+The standard termination criteria used by supercompilers is the homeomorphic embedding \cite{leuschel:homeomorphic}. The homeomorphic embedding is a well-quasi ordering, from Kruskal's Tree Theorem \cite{kruskal:tree}. The idea requires that for every infinite sequence $e_1,e_2 \ldots$ there exist indicies $i < j$ such that $e_i \ntriangleleft e_j$. The intuition is $x \ntriangleleft y$ holds if by removing nodes from $y$ you cannot reach $x$. Our termination ordering uses the idea idea of a well-quasi ordering, but with a very different ordering relation.
 
-We are unaware of any supercompilers before that have tracked expressions, or that have used our termination ordering. Without our particular treatment of expressions and particular termination rules it would not have been possible to use this termination ordering. For example, if we inline let expressions then subexpressions are changed internally, and a single subexpression name is no longer sufficient.
+We are unaware of any other supercompilers that have assigned names to expressions, or that have used a bag based termination ordering (most use tree orderings, or sometimes cost models/budgets). Without our particular treatment of expressions as a set of let bindings, and our particular simplification rules, it would not have been possible to use our termination ordering. For example, if we ever inline let expressions then subexpressions would be changed internally, and a single name for each subexpression would no longer be sufficient.
 
-In some cases, our ordering is certainly less restrictive than the homeomorphic embedding. Our example in \S\ref{sec:term_example} would have stopped one step earlier with homeomorphic embedding. Given a reasonably standard  interpretation of let expressions for homeomorphic embedding, and an embedding which ignores variable names, we can show that homeomorphic embedding is never less restrictive than our ordering. However, this assumes treating the let expression etc. in the same manner, which isn't entirely justified. However, our termination ordering was written with the goal of being simple, understandable, predictable and fast to implement.
+In some cases, our ordering is certainly less restrictive than the homeomorphic embedding. Our example in \S\ref{sec:term_example} would have stopped one step earlier with a homeomorphic embedding. Under a fairly standard interpretation of variable names and let expressions, we can show that our ordering is always less restrictive than the homeomorphic embedding -- although other differences in our treatment of expressions mean such a comparison is not necessarily meaningful. However, we did not choose our termination criteria to permit more expressions -- it was chosen for both simplicity and compile-time performance.
 
-We use two separate termination histories, one in |reduce| and one in |optimise|. A particular result of this is that the optimisation of a program is not based on what has passed before. This hopefully leads to better predictability. It also means the termination needs to check many fewer expressions when deciding if to terminate.
+We use two separate termination histories, one in |reduce| and another in |optimise| -- an idea suggested in \citet{ndm:thesis}, but not previously implemented. By separating the termination histories we gain better predictability, as |reduce| is not dependent on which functions have gone before. Additionally, the histories are kept substantially smaller, again improving compile-time performance. By splitting termination checks we also reduce the coupling between the separate aspects of supercompilation, allowing us to present a simpler manager than would otherwise be possible.
 
-Note that the totally different termination criteria and vastly different other bits lead to a generalisation/split strategy that is entirely different, and also very simple.
+As a result of the changes to termination, the operation for splitting after the termination check fails is different. In particular we can use almost identical operations when either evaluation fails to continue, or the termination check fails.
 
-\subsubsection{The Manager}
-
-While the supercompiler is novel in many aspects, possibly the largest different is the design and presentation. The concept of a ``manager'' had previously been used in a limited form \cite{me:ifl2007post}, but this is the most extensive use. In particular we have divided the parts of a supercompiler very robustly. Our treatment of recursive functions is essentially the same, but presented in a very novel way.
-
-Our work is definately classed as a supercompiler, but makes a large number of novel decisions. In particular, where often supercompiler authors have a choice at some points, many of our design decisions are forced upon us. We hope that this leads to decisions that naturally fit together. Whatever the result, our supercompiler is certainly a new point on the design space.
-
-\subsection{Other Related Work}
-
-
-Work on list fusion etc. is usually limited to lists, which isn't great.
-
-Partial evaluation has it's place, but supercompilers tend to be better for changing data -- for example the tagsoup would have frozen the parameters with partial evaluation, but not eliminated intermediate data structures.
-
-Many program optimisation techniques reduce abstraction, some such as fusion and specialisation have been covered extensively. However, the neat thing about supercompilation is that fusion (particularly list fusion) falls out naturally by the way the program is written -- no specific rules such as foldr/build or stream/unstream. In particular, we can fuse away |words . length|, even though in general there is no fusion rule to do that.
-
-
-\subsubsection{Partial evaluation}
+\subsection{Partial evaluation}
 
 There has been a lot of work on partial evaluation \cite{jones:partial_evaluation}, where a program is specialised with respect to some static data. Partial evaluation works by marking all variable bindings within a program as either static or dynamic, using binding time analysis, then specialises the program with respect to the static bindings. Partial evaluation is particularly appropriate for optimising an interpreter to the expression tree of a particular program, automatically generating a compiler, and removing \textit{interpretation overhead}. The translation of an interpreter into a compiler is known as the First Futamura Projection \cite{futanama:projections}, and can often give an order of magnitude speedup.
 
-Supercompilation and partial evaluation both remove overhead within a program. Partial evaluation is more suited to completely removing static data, such as an expression tree which is interpreted. Supercompilation is able to remove intermediate data structures, similar to deforestation, which partial evaluation cannot.
+Supercompilation and partial evaluation both remove abstraction overhead within a program. Partial evaluation is more suited to completely removing static data, such as an expression tree which is interpreted. Supercompilation is able to remove intermediate data structures, similar to deforestation, which partial evaluation cannot.
 
-Partial evaluation has been applied to full-scale functional languages, such as Curry
-\cite{albert:partial_evaluation_curry}.
+\subsection{Deforestation}
 
-\subsubsection{Deforestation}
+The deforestation technique \cite{wadler:deforestation} removes intermediate lists in computations. This technique has been extended in many ways to encompass higher order deforestation \cite{marlow:higher_order_deforestation} and work on other data types \cite{coutts:string_fusion}. In many cases the gains from supercompilation are just particular forms of deforestation.
 
-The deforestation technique \cite{wadler:deforestation} removes intermediate lists in computations. This technique has been extended in many ways to encompass higher order deforestation \cite{marlow:higher_order_deforestation} and work on other data types \cite{coutts:string_fusion}. Probably the most practically motivated work has come from those attempting to restrict deforestation, in particular shortcut deforestation \cite{gill:shortcut_deforestation}, and newer approaches such as stream fusion \cite{coutts:stream_fusion}. In this work certain named functions are automatically fused together. By rewriting library functions in terms of these special functions, fusion occurs.
+Probably the most practically applied work on deforestation involves using GHC's rewrite rules to optimise programs \cite{spj:rules}. Shortcut deforestation rewrites many definitions in terms of |foldr| and |build|, then combines |foldr|/|build| pairs \cite{gill:shortcut_deforestation}. Stream fusion is similar to shortcut deforestation, but relies on |stream|/|unstream| rules \cite{coutts:stream_fusion}. In both cases the optimisation only applies to lists, and only to functions written in terms of the correct primitives. The advantage of supercompilation is that it applies to many types and functions, without any special effort from the program author.
 
-\subsubsection{Whole Program Compilation}
+\subsection{Lower Level Optimisations}
+
+Our optimisation works at the Core level, but even once efficient Core has been generated there is still some work before efficient machine code can be produced. Key optimisations include strictness analysis and unboxing \cite{spj:unboxing}. In GHC both of these optimisations are done at the core level, using a core language extended with unboxed types. After this lower level core has been generated, it is then compiled to STG machine instructions \cite{spj:stg}, from which assembly code is generated. There is still work being done to modify the lowest levels to take advantage of the current generation of microprocessors \cite{marlow:pointer_tagging}. We rely on GHC to perform all these optimisations after our supercompiler generates a residual program.
 
 The GRIN approach \cite{grin} uses whole program compilation for Haskell. It is currently being implemented in the jhc compiler \cite{jhc}, with promising initial results. GRIN works by first removing all functional values, turning them into case expressions, allowing subsequent optimisations. The intermediate language for jhc is at a much lower level than our Core language, so jhc is able to perform detailed optimisations that we are unable to express.
 
-\subsubsection{Lower Level Optimisations}
-
-Our optimisation works at the Core level, but even once efficient Core has been generated there is still some work before efficient machine code can be produced. Key optimisations include strictness analysis and unboxing \cite{spj:unboxing}. In GHC both of these optimisations are done at the core level, using a core language extended with unboxed types. After this lower level core has been generated, it is then compiled to STG machine instructions \cite{spj:stg}, from which assembly code is generated. There is still work being done to modify the lowest levels to take advantage of the current generation of microprocessors \cite{marlow:pointer_tagging}. We rely on GHC to perform all these optimisations after Supero generates a residual program.
-
-\subsubsection{Other Transformations}
-
-One of the central operations within our optimisation is inlining, a technique that has been used extensively within GHC \cite{spj:inlining}. We generalise the constructor specialisation technique \cite{spj:specconstr}, by allowing specialisation on any arbitrary expression, including constructors.
-
-One optimisation we do not currently support is the use of user provided transformation rules \cite{spj:rules}, which can be used to automatically replace certain expressions with others -- for example |sort . nub| removes duplicates then sorts a list, but can be done asymptotically faster in a single operation.
-
-
-
-
 \section{Conclusions and Future Work}
+
+\todo{this section is not finished}
 
 Need more benchmarks, integrate into a production quality compiler (GHC). Our supercompiler has been designed to run faster, but does it really do so?
 
